revision index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Sebastián Bono Vargas</h2>
                     <hr class="primary">
-                    <p>Ejercicio de servicios cognitivos y despliegue en jenkins</p>
+                    <p>Ejercicio de servicios cognitivos y despliegue en jenkins - Conectado con GitHub</p>
                 </div>
 
             </div>
